--- a/src/main/resources/window_style.css
+++ b/src/main/resources/window_style.css
@@ -60,7 +60,7 @@
 
 .gameOverStyle {
     -fx-font-family: "Let's go Digital";
-    -fx-font-size: 48;
+    -fx-font-size: 30;   //put game over font size smaller
     -fx-background-color: red;
 }
 
