--- a/src/main/resources/window_style.css
+++ b/src/main/resources/window_style.css
@@ -1,6 +1,9 @@
 .root {
-    -fx-background-image: url("background_image.png");
-}
+    -fx-background-image: url("space.jpg");    //change background image
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center, center;
+    -fx-background-size: cover;
+    }
 
 .nextBrick {
     -fx-border-width: 2px;
@@ -9,6 +12,7 @@
 }
 
 .gameBoard {
+    -fx-background-image: url("background_image.png");    //background image for frame
     -fx-border-color: linear-gradient(#2A5058, #61a2b1);
     -fx-border-width: 12px;
     -fx-border-radius: 12px;
