--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -17,28 +17,47 @@
         <VBox alignment="CENTER" spacing="15">
 
             <!-- Timer -->
-            <HBox spacing="2" alignment="CENTER">
-                <ImageView fx:id="minTens" fitWidth="30" fitHeight="40"/>
-                <ImageView fx:id="minOnes" fitWidth="30" fitHeight="40"/>
-                <Label text=":" style="-fx-font-size: 24; -fx-text-fill: white;"/>
-                <ImageView fx:id="secTens" fitWidth="30" fitHeight="40"/>
-                <ImageView fx:id="secOnes" fitWidth="30" fitHeight="40"/>
-            </HBox>
+            <VBox fx:id="statusContainer" alignment="CENTER" spacing="10"
+                  style="-fx-padding: 10; -fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 8;
+             -fx-background-color: rgba(0,0,0,0.3); -fx-background-radius: 8;">
+                <ImageView fitWidth="120" fitHeight="40" preserveRatio="true">
+                    <image>
+                        <Image url="@Timer.png" />
+                    </image>
+                </ImageView>
+
+                <VBox fx:id="statusContainer2" alignment="CENTER" spacing="10"
+                      style="-fx-padding: 10; -fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 8; -fx-background-color: rgba(0,0,0,0.3); -fx-background-radius: 8;">
+                <HBox spacing="2" alignment="CENTER">
+                    <ImageView fx:id="minTens" fitWidth="30" fitHeight="40"/>
+                    <ImageView fx:id="minOnes" fitWidth="30" fitHeight="40"/>
+                    <Label text=":" style="-fx-font-size: 24; -fx-text-fill: white;"/>
+                    <ImageView fx:id="secTens" fitWidth="30" fitHeight="40"/>
+                    <ImageView fx:id="secOnes" fitWidth="30" fitHeight="40"/>
+                </HBox>
+                </VBox>
+            </VBox>
+
 
             <!-- Line -->
+        <VBox fx:id="statusContainer3" alignment="CENTER" spacing="10"
+              style="-fx-padding: 10; -fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 8; -fx-background-color: rgba(0,0,0,0.3); -fx-background-radius: 8;">
             <VBox alignment="CENTER" spacing="5">
                 <ImageView fitWidth="120" fitHeight="40" preserveRatio="true">
                     <image>
                         <Image url="@Line.png" />
                     </image>
                 </ImageView>
-
+                <VBox fx:id="statusContainer4" alignment="CENTER" spacing="10"
+                      style="-fx-padding: 10; -fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 8; -fx-background-color: rgba(0,0,0,0.3); -fx-background-radius: 8;">
                 <HBox fx:id="linesDisplay" spacing="2" alignment="CENTER">
                     <ImageView fx:id="lineHundreds" fitWidth="20" fitHeight="30" />
                     <ImageView fx:id="lineTens" fitWidth="20" fitHeight="30" />
                     <ImageView fx:id="lineOnes" fitWidth="20" fitHeight="30" />
                 </HBox>
             </VBox>
+        </VBox>
+        </VBox>
         </VBox>
 
         <VBox alignment="CENTER" spacing="15">
@@ -59,17 +78,31 @@
                 </HBox>
             </HBox>
 
-            <!-- Game Board -->
-            <StackPane
-                    maxWidth="150" maxHeight="400"
-                    prefWidth="150" prefHeight="400"
-                    styleClass="gameBoard">
+    <HBox alignment="CENTER" spacing="20">
+        <!-- Game Board -->
+        <VBox alignment="CENTER" spacing="10">
+            <StackPane maxWidth="150" maxHeight="400"
+                       prefWidth="150" prefHeight="400"
+                       styleClass="gameBoard">
                 <GridPane fx:id="gamePanel" vgap="1" />
                 <Pane fx:id="brickOverlay" pickOnBounds="false" />
                 <Pane fx:id="groupNotification" pickOnBounds="false" />
                 <GameOverPanel fx:id="gameOverPanel" StackPane.alignment="CENTER" />
             </StackPane>
         </VBox>
+    </HBox>
+        </VBox>
+
+        <!-- Next Block Preview -->
+        <VBox alignment="CENTER" spacing="2"
+              prefHeight="80" maxHeight="80" minHeight="80"
+              style="-fx-padding: 5; -fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 8;">
+            <Label text="Next" style="-fx-text-fill: white; -fx-font-size: 16;" />
+            <GridPane fx:id="nextBlockPane" hgap="1" vgap="1"
+                      prefWidth="70" prefHeight="50"
+                      maxHeight="50" minHeight="50" />
+        </VBox>
+
     </HBox>
 
     <!-- PAUSE BUTTON -->
