--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -63,7 +63,7 @@
         <VBox alignment="CENTER" spacing="15">
 
             <!-- Score -->
-            <HBox alignment="CENTER" spacing="-15">
+            <HBox alignment="CENTER" spacing="5">
                 <ImageView fitWidth="70" fitHeight="40" preserveRatio="true">
                     <image>
                         <Image url="@Score.png" />
@@ -95,13 +95,19 @@
 
         <!-- Next Block Preview -->
         <VBox alignment="CENTER" spacing="2"
-              prefHeight="80" maxHeight="80" minHeight="80"
-              style="-fx-padding: 5; -fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 8;">
-            <Label text="Next" style="-fx-text-fill: white; -fx-font-size: 16;" />
-            <GridPane fx:id="nextBlockPane" hgap="1" vgap="1"
-                      prefWidth="70" prefHeight="50"
-                      maxHeight="50" minHeight="50" />
+              prefHeight="150" maxHeight="150" minHeight="150"
+              prefWidth="150" maxWidth="150" minWidth="150"
+              style="-fx-padding: 5; -fx-border-color: white; -fx-border-width: 5; -fx-border-radius: 5;">
+            <Label text="Next" style="-fx-text-fill: white; -fx-font-size: 20;-fx-font-weight: bold;" />
+
+            <StackPane fx:id="nextBlockContainer"
+                       prefWidth="70" prefHeight="50"
+                       style="-fx-background-color: rgba(0,0,0,0.3);"
+                       alignment="CENTER">
+                <Pane fx:id="nextBlockPane" prefWidth="120" prefHeight="80"/>
+            </StackPane>
         </VBox>
+
 
     </HBox>
 
